# RobotAtHome_dataset_parser

./: CMakeLists.txt  README.md  build.sh  dataset.yaml  main.cpp  viewer.yaml
ROS/launch/: hector_mapping.launch
ROS/rviz/: DataViewerRos.rviz  hector_mapping.rviz
script/: script.txt
src/: Common.cpp  Common.h  DataParser.cpp  DataParserROS.cpp  DataViewerRos.cpp
